# rest_api/urls.py
@@ -19,6 +19,7 @@ rest_urls = {
     'sample_set':     'rest/sample_set/',
     'score':          'rest/score/',
     'info':           'rest/info', # No slash (added later)
+    'api_versions':   'rest/api_versions', # No slash (added later)
     'ancestry':       'rest/ancestry_categories', # No slash (added later)
     'gwas':           'rest/gwas/get_score_ids/',
 }
@@ -56,6 +57,7 @@ urlpatterns = [
     # Extra endpoints
     re_path(r'^'+rest_urls['gwas']+'(?P<gcst_id>[^/]+)'+slash, cache_page(cache_time)(RestGCST.as_view()), name="pgs_score_ids_from_gwas_gcst_id"),
     re_path(r'^'+rest_urls['info']+slash, cache_page(cache_time)(RestInfo.as_view()), name="getInfo"),
+    re_path(r'^'+rest_urls['api_versions']+slash, cache_page(cache_time)(RestApiVersions.as_view()), name="getApiVersions"),
     re_path(r'^'+rest_urls['ancestry']+slash, cache_page(cache_time)(RestAncestryCategories.as_view()), name="getAncestryCategories"),
     # Trait Category
     re_path(r'^'+rest_urls['trait_category']+'all'+slash, cache_page(cache_time)(RestListTraitCategories.as_view()), name="getAllTraitCategories")
